--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   text-align: center;
-  background-color: #283149;
+  background-image: url("./images/bg.jpg");
+  
 }
 
 h1 {
@@ -11,8 +12,10 @@ h1 {
 }
 
 footer {
-  color: #dbedf3;
+  color: #021812;
   font-family: sans-serif;
+  font-weight: bolder;
+  font-size: 130%;
 }
 
 .w {
